[package]
name = "const_str_to_pubkey"
version = "0.2.0"
authors = ["Yan"]
documentation = "https://docs.rs/const_str_to_pubkey"
edition = "2021"
keywords = ["Solana", "Anchor"]
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/macaujack/const_str_to_pubkey"
resolver = "2"
description = "A crate that helps you derive constant Solana Pubkey with constant string"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "2"
